Responsive Design for Planning page

--- a/src/components/organisms/EmploiDuTemps/EmploiDuTemps.css
+++ b/src/components/organisms/EmploiDuTemps/EmploiDuTemps.css
@@ -5,4 +5,11 @@
     padding: 0 !important;
     box-shadow: none !important;
   }
+
+.fc .fc-col-header-cell {
+  min-width: 100px; /* réductible */
+}
+.fc .fc-timegrid-slot-label {
+  min-width: 40px;
+}
   
